--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   youtube_player_iframe: ^5.2.1
   image_picker: ^1.1.2
+  http: ^1.3.0
+  provider: ^6.1.4
+  google_nav_bar: ^5.0.7
 
 dev_dependencies:
   flutter_test:
